# qt-sensors-bmp280-i2c

./: CMakeLists.txt  QBMP280_global.h  README.md  qbmp280.cpp  qbmp280.h  qbmp280_p.h  qbmp280backend.cpp  qbmp280backend.h  qbmp280plugin.h  qbmp280reading.cpp  qbmp280reading.h
